# robin-api

./: Cargo.toml  README.md  docker-compose.yml
migrations/: V1__initial.sql  V2__create_chat_message.sql  V2__user_table_add_token_column.sql  V3__create_chat_user.sql
src/: app_error.rs  db.rs  login.rs  main.rs  migrate.rs  model.rs  purge.rs  seed.rs  websocket.rs
src/models/: mod.rs  model_chat.rs  model_message.rs  model_user.rs  types.rs
