[package]
name = "robin-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["ws"] }
futures = "0.3.30"
tokio-tungstenite = "0.21.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
