[package]
name = "robin-chat"
version = "0.1.0"
edition = "2021"
default-run = "app"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["ws", "macros"] }
futures = "0.3.30"
tokio-tungstenite = "0.21.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
sqlx = { version = "0.7.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
dotenv = "0.15.0"
refinery = { version = "0.8.12", features = ["postgres"] }
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
anyhow = "1.0.79"
cargo-watch = "8.5.2"
tower-http = { version = "0.5.1", features = ["cors"] }
serde_json = "1.0.114"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

[[bin]]
name = "purge_db"
path = "src/purge.rs"

[[bin]]
name = "app"
path = "src/main.rs"
